# GeneralizedTicTacToe

./: CMakeLists.txt  main.c  plot_results.py  results.csv  run_experiments.sh
board/: board.c  board.h
game/: game.c  game.h
